perl (5.26.0-6) UNRELEASED; urgency=medium

  * Remove dangling pstruct.1 symlink (Closes: #870295)
  * Unbreak Configure calls in cross builds (Closes: #872471)
  * Fix an example in JSON::PP documentation (Closes: #871837)
  * Break older versions of slic3r (see #869360)

 -- Niko Tyni <ntyni@debian.org>  Sat, 19 Aug 2017 16:53:35 +0300

perl (5.26.0-5) unstable; urgency=medium

  * Make perl-base Break intltool (<< 0.51.0-4). (Closes: #869612)
  * Amend debian/CVE-2016-1238/base-pm-amends-pt2.diff description based
    on the final upstream commit information.
  * Lower the optimization level of opmini.c on hppa. (Closes: #869122)
  * Also lower the optimization level of op.c and opmini.c on sh4.
    (Closes: #869373)

 -- Niko Tyni <ntyni@debian.org>  Sun, 30 Jul 2017 19:15:47 +0300

perl (5.26.0-4) unstable; urgency=medium

  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Thu, 20 Jul 2017 22:23:29 +0300

perl (5.26.0-3) experimental; urgency=medium

  * Merge 5.24.1-5, -6 and -7 from unstable:
    + fix Breaks and Replaces versions for podlators-perl and libnet-perl.
    + drop obsolete libversion-requirements-perl Breaks/Replaces/Provides
      entries.
    + Apply upstream base.pm no-dot-in-inc fix (from 5.24.2-RC1)
      (Closes: #867170)
    + Revert "Adopt versioned Provides for the dual lived modules",
      hopefully temporarily. (Reopens: #758100).

 -- Niko Tyni <ntyni@debian.org>  Sun, 09 Jul 2017 19:59:07 +0300

perl (5.26.0-2) experimental; urgency=medium

  * Update Breaks/Replaces versions for libmodule-corelist-perl.
  * No longer configure with -Dusesitecustomize, unnecessary with the
    5.26.0-1 changes.
  * Synchronize with 5.24.1-4 from unstable:
    + Update the kernel versions in $Config{myuname} et al.
    + Backport various Getopt-Long fixes from upstream 2.50..2.51.
      (Closes: #855532, #864544)
    + Backport upstream patch fixing regexp "Malformed UTF-8 character"
      crashes. (Closes: #864782)