@@ -12,10 +12,8 @@ then
     ln -s perl $docs/perl-base
     fi
 
-    # util-linux has an alternate rename
-    update-alternatives --install /usr/bin/rename rename /usr/bin/prename 60 \
-    --slave /usr/share/man/man1/rename.1.gz rename.1.gz \
-        /usr/share/man/man1/prename.1.gz
+    # rename (and prename) is now only provided by the rename package
+    update-alternatives --remove rename /usr/bin/prename
 
     if which dpkg-trigger >/dev/null 2>&1 && \
        [ -n "$2" ] && \
