@@ -1,8 +1,0 @@
-#!/bin/sh -e
-
-if [ "$1" != upgrade ]
-then
-    update-alternatives --remove rename /usr/bin/prename
-fi
-
-exit 0
